--- a/index.html
+++ b/index.html
@@ -2,106 +2,126 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Practica RDS</title>
-	<link rel="stylesheet" href="./src/css/index.css">
+	<title>RDS Practica</title>
+	<link rel="stylesheet" href="./assets/css/index.css">
 	<link rel="stylesheet" href="./src/css/normalize.css">
+	<link rel="stylesheet" href="./src/css/fonts.css">
 </head>
 <body>
 	<div class="u-container">
-	<!-- HEADER -->
+		<!-- HEADER -->
 		<header class="header">
 			<div class="header-logo">
-				<img src="./src/images/red-design-systems.png" alt="Logo">
-			</div>	
+				<img src="./src/images/red-design-systems.png" alt="">
+			</div>
 			<div class="header-main">
 				<div class="links">
-					<a href="#">Small and Medium Bussiness</a>
+					<a href="#">Small and medium Business Solution</a>
 					<a href="#">Go to Oracle.com</a>
 				</div>
 				<nav class="main">
 					<ul class="main-list">
 						<li class="main-list-item">
-							<a href="#">Finance</a>
+							<a href="">Finance</a>
 						</li>
 						<li class="main-list-item">
-							<a href="#">Sales</a>
+							<a href="">Sales</a>
 						</li>
 						<li class="main-list-item">
-							<a href="#">HR</a>
+							<a href="">HR</a>
 						</li>
 						<li class="main-list-item">
-							<a href="#">IT</a>
+							<a href="">IT</a>
 						</li>
 					</ul>
 				</nav>
 			</div>
 		</header>
-	<!-- BANNER -->
+
+		<!-- BANNER -->
 		<section class="banner">
 			<div class="banner-bg"></div>
 			<div class="banner-text">
-				<h1 class="banner-text-tittle">GO After High Growth with Your Financials</h1>
-				<p class="banner-text-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cumque, accusamus necessitatibus officiis. Impedit, dolore dolorem velit. Quod repudiandae, quasi eveniet commodi repellendus recusandae repellat, debitis similique rem, autem ex!</p>
+				<h1 class="banner-text-title">GO After High Growth with Your Finances</h1>
+				<p class="banner-text-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, nam cupiditate dolor animi debitis beatae, illo aspernatur suscipit, odit perferendis tempora laudantium libero, assumenda quisquam magnam sit. Cumque, nesciunt, praesentium?</p>
+
 				<div class="banner-text-contentButtons">
-					<button class="button">Watch Video</button>
-					<button class="button">Chat with rep</button>
-				</div>
+					<button class="button">
+						Watch the Video
+						<span class="icon-play"></span>
+					</button>
+					<button class="button">
+						Chat with Rep
+						<span class="icon-chat"></span>
+					</button>
+				</div>			
 				<div class="banner-text-contentLinks">
 					<a href="#" class="link">ERP Cloud</a>
+					<span class="icon-arrow-down iconOne"></span>
 					<a href="#" class="link">Planning & Budgeting Cloud</a>
+					<span class="icon-arrow-down iconTwo"></span>
 				</div>
 			</div>
 		</section>
-	<!-- ERP CLOUD -->
+		
+		<!-- ERP CLOUD -->
 		<section class="erpCloud">
 			<div class="erpCloud-img">
 				<img src="./src/images/product-finance-cloud.png" alt="">
 			</div>
 			<div class="erpCloud-text">
-					<h2 class="erpCloud-text-tittle">ERP Cloud</h2>
-					<p class="erpCloud-text-subtittle">Highlights:</p>
-					<hr>
-					<ul class="erpCloud-text-list">
-						<li class="item">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-						</li>
-						<li class="item">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-						</li>
-						<li class="item">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-						</li>
-						<li class="item">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-						</li>
-					</ul>
-					<div class="erpCloud-text-contentButtons">
-						<button class="button">Watch Video</button>
-						<button class="button">Product Details</button>
-					</div>
+				<h2 class="erpCloud-text-title">ERP Cloud</h2>
+				<p class="erpCloud-text-subtitle">Higlight:</p>
+				<hr>
+				<ul class="erpCloud-text-list">
+					<li class="item">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta vero quaerat illo minus degenered exit.
+					</li>
+					<li class="item">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit nulla, voluptates. Qui, eligendi.
+					</li>
+					<li class="item">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit sunt. Explicabo iusto fugit fuga tempore et?
+					</li>
+					<li class="item">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit quidem.
+					</li>
+				</ul>
+				<div class="erpCloud-text-contentButtons">
+					<button class="button">
+						Watch Video
+						<span class="icon-play"></span>
+					</button>
+					<button class="button">
+						Products Detail
+						<span class="icon-arrow-right"></span>
+					</button>
+				</div>
 			</div>
-			
 		</section>
-	<!-- CUSTOMER -->
+
+		<!-- CUSTOMERS -->
 		<section class="customers">
-			<h3 class="customers-tittle">A handful of Our Growing Customers</h3>
+			<h3 class="customers-title">A Handful of Our Growing Customers</h3>
 			<div class="customers-contentImages">
-				<img src="./src/images/logo-provita-mobile.png" alt="" class="customers-img">
-				<img src="./src/images/logo-imi-mobile.png" alt="" class="customers-img">
-				<img src="./src/images//logo-smartcitizen-mobile.png" alt="" class="customers-img">
+				<img src="./src/images/logo-provita-mobile.png" alt="" class="customers-contentImages-img">
+				<img src="./src/images/logo-imi-mobile.png" alt="" class="customers-contentImages-img">
+				<img src="./src/images/logo-smartcitizen-mobile.png" alt="" class="customers-contentImages-img">
 			</div>
 		</section>
-	<!-- CARDS -->
-		<div class="contentCards">
+		<hr>
+		
+		<!-- CARDS -->
+		<div class="content-cards">
 			<div class="card">
 				<div class="card-img">
-					<img src=./src/images/thumb-190x142-article-forbes.jpg alt="">
+					<img src="./src/images/thumb-190x142-article-forbes.jpg" alt="">
 				</div>
 				<div class="card-text">
 					<p class="card-text-text">
-						bla bla bla blabla bla bla bla
+						Forbes: "The Top 5 Strategic Finance Issues For 2016"
 					</p>
-					<a href="#" class="card-text-link">Read More</a>
+					<a href="#" class="card-text-link">Read more</a>
 				</div>
 			</div>
 
@@ -111,202 +131,189 @@
 				</div>
 				<div class="card-text">
 					<p class="card-text-text">
-						bla bla bla blabla bla bla bla
+						Forbes: "The Top 5 Strategic Finance Issues For 2016"
 					</p>
-					<a href="#" class="card-text-link">Read More</a>
+					<a href="#" class="card-text-link">Read more</a>
 				</div>
 			</div>
 		</div>
-	<!-- PLANNING -->
+
+		<!-- PLANNING -->
 		<section class="planning">
 			<div class="planning-content">
-			<div class="planning-content-text">
-				<h2 class="tittle">ERP Cloud</h2>
-				<p class="subtitle">Higlight</p>
-				<hr>
-				<ul class="list">
-					<li class="list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium itaque ex blanditiis
-					</li>
-					<li class="list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-					</li>
-					<li class="list-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
-					<li class="list-item">Lorem ipsum dolor si!</li>
-				</ul>
-				<div class="planning-contentButtons">
-					<button class="button">watch Video</button>
-					<button class="button">Products Detail</button>
+				<div class="planning-content-text">
+					<h2 class="title">Planning & Budgeting Cloud</h2>
+					<p class="subtitle">Higlight:</p>
+					<hr>
+					<ul class="list">
+						<li class="list-item">
+							Lorem ero quaerat illo minus molestiae, aspernatur, deserunt culpa  voluptas praesentium adipisci quod. Quasi, autem nobis eum nam soluta, nemo eius.
+						</li>
+						<li class="list-item">
+							Quam voluptatibus, deserunt repellat. Architecto rem! In repellat nulla, tempore suscipit dolores ipsam nostrum mollitia amet voluptates. Qui, eligendi.
+						</li>
+						<li class="list-item">
+							Nisi vitae voluptatem tenetur. Vero soluta totam perferendis in repellat sunt. Explicabo iusto fugit fuga tempore et?
+						</li>
+					</ul>
+					<div class="contentButtons">
+						<button class="contentButtons-button">
+							Watch Video
+							<span class="icon-play"></span>
+						</button>
+						<button class="contentButtons-button">
+							Products Detail
+							<span class="icon-arrow-right"></span>
+						</button>
+					</div>
 				</div>
-			</div>
-			<div class="planning-content-img">
-				<img src="./src/images/product-finance-cloud.png" alt="">
-			</div>
-			</div>
-				<!-- CARDS -->
-		<div class="contentCards">
-			<div class="card">
-				<div class="card-img">
-					<img src="./src/images/finance-blog-deskt.jpg" alt="">
-				</div>
-				<div class="card-text">
-					<p class="card-text-text">
-						bla bla bla blabla bla bla bla
-					</p>
-					<a href="#" class="card-text-link">Read More</a>
+				<div class="planning-content-img">
+					<img src="./src/images/product-planning-budgeting-cloud.png" alt="">
 				</div>
 			</div>
 
-			<div class="card">
-				<div class="card-img">
-					<img src="./src/images/blog-icon-desk.png" alt="">
+			<!-- CARDS -->
+			<div class="content-cards">
+				<div class="card">
+					<div class="card-img">
+						<img src="./src/images/finance-blog-deskt.jpg" alt="">
+					</div>
+					<div class="card-text">
+						<p class="card-text-text">
+							Forbes: "The Top 5 Strategic Finance Issues For 2016"
+						</p>
+						<a href="#" class="card-text-link">Read more</a>
+					</div>
 				</div>
-				<div class="card-text">
-					<p class="card-text-text">
-						bla bla bla blabla bla bla bla
-					</p>
-					<a href="#" class="card-text-link">Read More</a>
+
+				<div class="card">
+					<div class="card-img">
+						<img src="./src/images/blog-icon-desk.png" alt="">
+					</div>
+					<div class="card-text">
+						<p class="card-text-text">
+							Forbes: "The Top 5 Strategic Finance Issues For 2016"
+						</p>
+						<a href="#" class="card-text-link">Read more</a>
+					</div>
 				</div>
 			</div>
-		</div>
-
 		</section>
 
-	<!-- FOOTER -->
+		<!-- FOOTER -->
 		<footer class="footer">
 			<div class="footer-contentCols">
-			<!-- COL1 -->
+				<!-- COL1 -->
 				<div class="footer-contentCols-col">
-					<h5 class="tittle">FINANCES</h5>
+					<h5 class="title">FINANCES</h5>
 					<ul class="list">
 						<li class="list-item">
-							<a href="#" class="list-item-link">ERP Cloud</a>
+							<a href="" class="list-item-link">Erp Cloud</a>
 						</li>
 						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
+							<a href="" class="list-item-link">Lorem text</a>
 						</li>
 						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
+							<a href="" class="list-item-link">Text Lorem</a>
 						</li>
 						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-					</ul>
-				</div>
-			<!-- COL2 -->
-				<div class="footer-contentCols-col">
-					<h5 class="tittle">SALES</h5>
-					<ul class="list">
-						<li class="list-item">
-							<a href="#" class="list-item-link">ERP Cloud</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-					</ul>
-				</div>
-			<!-- COL3 -->
-				<div class="footer-contentCols-col">
-					<h5 class="tittle">HR</h5>
-					<ul class="list">
-						<li class="list-item">
-							<a href="#" class="list-item-link">ERP Cloud</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-					</ul>
-				</div>
-			<!-- COL4 -->
-				<div class="footer-contentCols-col">
-					<h5 class="tittle">IT</h5>
-					<ul class="list">
-						<li class="list-item">
-							<a href="#" class="list-item-link">ERP Cloud</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
-						</li>
-						<li class="list-item">
-							<a href="#" class="list-item-link">Lorem Text</a>
+							<a href="" class="list-item-link">Finances</a>
 						</li>
 					</ul>
 				</div>
 
+				<!-- COL2 -->
+				<div class="footer-contentCols-col">
+					<h5 class="title">SALES</h5>
+					<ul class="list">
+						<li class="list-item">
+							<a href="" class="list-item-link">Erp Cloud</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Lorem text</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Text Lorem</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Finances</a>
+						</li>
+					</ul>
+				</div>
+
+				<!-- COL3 -->
+				<div class="footer-contentCols-col">
+					<h5 class="title">HR</h5>
+					<ul class="list">
+						<li class="list-item">
+							<a href="" class="list-item-link">Erp Cloud</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Lorem text Lorem text</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Text Lorem</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Finances Lorem text</a>
+						</li>
+					</ul>
+				</div>
+
+				<!-- COL4 -->
+				<div class="footer-contentCols-col">
+					<h5 class="title">IT</h5>
+					<ul class="list">
+						<li class="list-item">
+							<a href="" class="list-item-link">Erp Cloud</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Lorem text Lorem text</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Text Lorem Lorem text</a>
+						</li>
+						<li class="list-item">
+							<a href="" class="list-item-link">Finances</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-
+	
 			<div class="footer-contentBottom">
-				<h5 class="footer-contentBottom-tittle">
-					<span>Integrated Cloud</span> Applications & Plataform Services
+				<h5 class="footer-contentBottom-title">
+					<span>Integrated Cloud</span> Applications & Platform Services
 				</h5>
-
 				<ul class="footer-contentBottom-listLinks">
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
-					<li class="item">
-					<a href="" class="item-link">Text Dummy</a>
-					</li>
+					<li class="item"><a href="" class="item-link">Oracle</a> |</li>
+					<li class="item"><a href="" class="item-link">Suscribe</a> |</li>
+					<li class="item"><a href="" class="item-link">Careers</a> |</li>
+					<li class="item"><a href="" class="item-link">Contact Us</a> |</li>
+					<li class="item"><a href="" class="item-link">Site Maps</a> |</li>
+					<li class="item"><a href="" class="item-link">Legal Notices</a> |</li>
+					<li class="item"><a href="" class="item-link">Terms of Use</a> |</li>
+					<li class="item"><a href="" class="item-link">Privacy</a> |</li>
+					<li class="item"><a href="" class="item-link">Cookie Preferences</a> |</li>
+					<li class="item"><a href="" class="item-link">Ad Choises</a> |</li>
+					<li class="item"><a href="" class="item-link">Oracle Mobile</a> </li>
 				</ul>
-
 				<ul class="footer-contentBottom-listSocial">
-						<li class="item">
-							<a href="" class="item-link">
-								bla
-							</a>
-						</li>
-						<li class="item">
-							<a href="" class="item-link">
-								bla
-							</a>
-						</li>
-						<li class="item">
-							<a href="" class="item-link">
-								bla
-							</a>
-						</li>
+					<li class="item">
+						<a href="" class="item-link">
+							<span class="icon-fb"></span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="" class="item-link">
+							<span class="icon-twitter"></span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="" class="item-link">
+							<span class="icon-in"></span>
+						</a>
+					</li>
 				</ul>
-
 			</div>
 		</footer>
 	</div>
