--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>RDS Practica</title>
 	<link rel="stylesheet" href="./assets/css/index.css">
-	<link rel="stylesheet" href="./src/css/normalize.css">
-	<link rel="stylesheet" href="./src/css/fonts.css">
+	<link rel="stylesheet" href="./assets/css/normalize.css">
+	<link rel="stylesheet" href="./assets/css/fonts.css">
 </head>
 <body>
 	<div class="u-container">
